
cmake_minimum_required(VERSION 3.10)
file(GLOB packSRC "src/*.c" "src/*.h" )
add_library(uLAPack STATIC ${packSRC})
target_include_directories(uLAPack
    PUBLIC  ${CMAKE_CURRENT_SOURCE_DIR}
)
# target_link_libraries(uLAPack uKal)
add_definitions(-DUKAL_MAX_STATE_VECTOR_SIZE=5 -DUKAL_MAX_MEASUREMENT_VECTOR_SIZE=5 
-DULAPACK_MATRIX_ENTRY_TYPE=double -DULAPACK_INDEX_TYPE=uint64_t 
-DULAPACK_SIGNED_INDEX_TYPE=int64_t -DULAPACK_USE_STATIC_ALLOC=1 
-DULAPACK_MAX_MATRIX_N_ROWS=5 -DULAPACK_MAX_MATRIX_N_COLS=5 
-DULAPACK_INITIALIZE_MEMORY=1 -DULAPACK_INVERSE_VIA_LU=1 -DULAPACK_MINIMUM_THRESHOLD_TOLERANCE=.0001)
target_compile_definitions(uLAPack PUBLIC   
                    DUKAL_MAX_STATE_VECTOR_SIZE DUKAL_MAX_MEASUREMENT_VECTOR_SIZE
                    DULAPACK_MATRIX_ENTRY_TYPE    DULAPACK_INDEX_TYPE
                    DULAPACK_SIGNED_INDEX_TYPE   DULAPACK_USE_STATIC_ALLOC
                    DULAPACK_MAX_MATRIX_N_ROWS    DULAPACK_MAX_MATRIX_N_COLS
                    DULAPACK_INITIALIZE_MEMORY    DULAPACK_INVERSE_VIA_LU  DULAPACK_MINIMUM_THRESHOLD_TOLERANCE)
target_link_libraries(uLAPack m)